# Spacy2

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists_local.txt  Doxyfile  Doxyfile.in  README.md  content-contact.html  content-features.html  content-get-spacy.html  content-home.html  deploy_doc.sh  deploy_key.enc  documentation.dox  groups  index.html  mainpage.dox  params.json  project.config  spacy_documentation.dox
Algorithms/: CMakeLists.txt  banachSpace.cpp  banachSpace.hh  c0Functional.cpp  c0Functional.hh  c0Operator.cpp  c0Operator.hh  c1Functional.cpp  c1Functional.hh  c1Operator.cpp  c1Operator.hh  c2Functional.cpp  c2Functional.hh  c2Operator.cpp  c2Operator.hh  derivative.cpp  derivative.hh  differentiableFunctional.cpp  differentiableFunctional.hh  differentiableOperator.cpp  differentiableOperator.hh  dualPairing.cpp  dualPairing.hh  functionSpace.cpp  functionSpace.hh  functionSpaceElement.cpp  functionSpaceElement.hh  functional.cpp  functional.hh  hessian.cpp  hessian.hh  hilbertSpace.cpp  hilbertSpace.hh  hilbertSpaceNorm.cpp  hilbertSpaceNorm.hh  inducedScalarProduct.cpp  inducedScalarProduct.hh  inverseOperator.cpp  inverseOperator.hh  lagrangeFunctional.cpp  (+27 more)
Algorithms/Adapter/: fenics.hh  kaskade.hh
Algorithms/Adapter/FEniCS/: assignXIfPresent.hh  functional.hh  l2Product.cpp  l2Product.hh  luSolver.cpp  luSolver.hh  operator.hh  util.hh  (+5 more)
Algorithms/Algorithm/: dampingFactor.cpp  dampingFactor.hh  dampingStrategies.hh  lipschitzConstant.cpp  lipschitzConstant.hh  newton.hh  parameter.cpp  parameter.hh  regularityTest.cpp  regularityTest.hh  terminationCriteria.cpp  terminationCriteria.hh
Algorithms/ConjugateGradients/: cg.hh  cgImplementation.cpp  cgImplementation.hh  cgTerminationCriteria.cpp  cgTerminationCriteria.hh  jacobipreconditioner.cpp
Algorithms/FunctionSpaces/: productSpace.hh  realSpace.hh
Algorithms/Interface/: abstractBanachSpace.cpp  abstractBanachSpace.hh  abstractC0Functional.cpp  abstractC0Functional.hh  abstractC0Operator.cpp  abstractC0Operator.hh  abstractC1Functional.cpp  abstractC1Functional.hh  abstractC1Operator.cpp  abstractC1Operator.hh  abstractC2Functional.cpp  abstractC2Functional.hh  abstractC2Operator.cpp  abstractC2Operator.hh  abstractDifferentiableFunctional.hh  abstractDifferentiableOperator.hh  abstractDualPairing.hh  abstractFunctionSpace.cpp  abstractFunctionSpace.hh  abstractFunctionSpaceElement.cpp  abstractFunctionSpaceElement.hh  abstractFunctional.cpp  abstractFunctional.hh  abstractHilbertSpace.cpp  abstractHilbertSpace.hh  abstractInexactLinearSolver.hh  abstractLinearSolver.cpp  abstractLinearSolver.hh  abstractNorm.hh  abstractOperator.hh  abstractProductSpace.cpp  abstractProductSpace.hh  abstractScalarProduct.hh  abstractTwiceDifferentiableFunctional.hh  abstractTwiceDifferentiableOperator.hh  abstractVector.cpp  abstractVector.hh  abstractVectorSpace.cpp  abstractVectorSpace.hh  energyScalarProduct.cpp  (+11 more)
Algorithms/Newton/: affinecovariantnewton.hh  dampingStrategies.hh
Algorithms/Operators/: kaskadeFunctional.cpp  kaskadeFunctional.hh  kaskadeOperator.hh  trackingTypeCostFunctional.cpp  trackingTypeCostFunctional.hh
Algorithms/Test/: scalarRFFGenOperator.hh
Algorithms/Util/: addEps.cpp  addEps.hh  callofundefinedfunctionexception.cpp  callofundefinedfunctionexception.hh  cast.hh  castTo.hh  cloneable.hh  conceptBase.hh  create.hh  epsParameter.cpp  epsParameter.hh  impl.hh  incompatiblespaceexception.cpp  invalidargumentexception.cpp  invoke.hh  mixins.hh  optionalApply.hh  regularityTestFailedException.hh  singularoperatorexception.cpp  static_checks.hh  voider.hh
Scripts/test/: CMakeLists.txt  util.hh
Spacy/: CMakeLists.txt  Norm.h  c1Functional.cpp  c1Functional.hh  c1Operator.cpp  c1Operator.hh  c2Functional.cpp  c2Functional.hh  derivative.cpp  derivative.hh  dynamicOperator.cpp  dynamicOperator.hh  functional.cpp  functional.hh  hessian.cpp  hessian.hh  hilbertSpaceNorm.cpp  hilbertSpaceNorm.hh  inducedScalarProduct.cpp  inducedScalarProduct.hh  linearOperator.cpp  linearOperator.cpp.autosave  linearOperator.hh  linearSolver.cpp  linearSolver.hh  linearizedOperator.cpp  linearizedOperator.hh  main.cpp  norm.hh  operator.cpp  operator.hh  scalarProduct.hh  spacy.h  vector.cpp  vector.hh  vectorSpace.cpp  vectorSpace.hh  zeroVectorCreator.cpp  zeroVectorCreator.hh
Spacy/Adapter/: dealII.hh  eigen.hh  fenics.hh  kaskade.hh  kaskadeParabolic.hh  scalar.hh
Spacy/Algorithm/: dampingFactor.cpp  dampingFactor.hh  lipschitzConstant.cpp  lipschitzConstant.hh  parameter.hh
Spacy/Detail/: c1Functional_table.h  c1Operator_table.h  c2Functional_table.h  details_for_c1Functional.hh  details_for_c1Operator.hh  details_for_c2Functional.hh  details_for_dynamicOperator.hh  details_for_functional.hh  details_for_linearOperator.hh  details_for_linearSolver.hh  details_for_operator.hh  details_for_vector.hh  details_for_zeroVectorCreator.hh  dynamicOperator_table.h  functional_table.h  linearOperator_table.h  linearSolver_table.h  operator_table.h  vector_table.h  zeroVectorCreator_table.h
Spacy/Spaces/: primalDualProductSpace.hh  productSpace.hh  realSpace.hh
Spacy/Util/: Timer.cpp  Timer.hh  cast.hh  cmath.cpp  cmath.hh  copy.hh  forEach.hh  invoke.hh  log.cpp  log.hh  logger.hh  memFnChecks.hh  memOpChecks.hh  mixins.hh  printer.cpp  printer.hh  smartPointer.hh  storage.h  table_util.hh  typeErasedStorage.hh  voider.hh
Test/: CMakeLists.txt  gtest.hh  mockSetup.hh
Test/FunctionSpaces/: productSpace_UnitTest.cpp  realSpace.cpp
Test/Mock/: c2Functional.cpp  c2Functional.hh  linearOperator.cpp  linearOperator.hh  linearSolver.cpp  linearSolver.hh  norm.cpp  norm.hh  scalarProduct.cpp  scalarProduct.hh  vector.cpp  vector.hh  vectorCreator.cpp  vectorCreator.hh
Test/Operators/: lagrangeFunctional_UnitTest.cpp  trackingTypeCostFunctional_UnitTest.cpp
Test/Spacy/: c1Functional.cpp  c1Operator.cpp  c2Functional.cpp  functional.cpp  indefiniteLinearSolver.cpp  indefiniteLinearSolver_UnitTest.cpp  linearOperator.cpp  operator.cpp  vectorSpace.cpp  vectorSpace_UnitTest.cpp
(+5140 files in other folders)
